nivasa-macros/tests/trybuild/validation_groups_mixed.stderr
error: expected `#[groups("create", "update")]`
 --> tests/trybuild/validation_groups_mixed.rs:5:5
  |
5 |     #[groups("create", 123)]
  |     ^
